--- a/src/components/hamburguer/hamburger.astro
+++ b/src/components/hamburguer/hamburger.astro
@@ -3,16 +3,14 @@
 ---
 
 <!-- Hamburger Menu Button -->
-<label class="hamburger" id="menu-btn">
+<label class="hamburger right-[4vw] md:right-[2vw]" id="menu-btn">
   <input type="checkbox" />
   <svg viewBox="0 0 32 32">
-    <!-- Top and bottom line (combined path) -->
+    <!-- Top and bottom line -->
     <path
       class="line line-top-bottom"
       d="M27 10 13 10C10.8 10 9 8.2 9 6 9 3.5 10.8 2 13 2 15.2 2 17 3.8 17 6L17 26C17 28.2 18.8 30 21 30 23.2 30 25 28.2 25 26 25 23.8 23.2 22 21 22L7 22"
     ></path>
-
-    <!-- Middle line -->
     <path class="line" d="M7 16 27 16"></path>
   </svg>
 </label>
@@ -21,7 +19,6 @@
   /* ====== Base Styles ====== */
   .hamburger {
     position: fixed;
-    right: 48px;
     top: 11px;
     z-index: 9999;
     cursor: pointer;
@@ -47,7 +44,6 @@
   /* Responsive scaling for small screens */
   @media (max-width: 767px) {
     .hamburger {
-      right: 24px;
       top: 14px;
     }
     .hamburger svg {
