feat: update styles

--- a/src/components/hamburguer/hamburger.astro
+++ b/src/components/hamburguer/hamburger.astro
@@ -54,7 +54,7 @@
   /* ====== Line Styling ====== */
   .line {
     fill: none;
-    stroke: #02c3bd;
+    stroke: var(--color-primary);
     stroke-linecap: round;
     stroke-linejoin: round;
     stroke-width: 3;
