--- a/src/sections/hero.astro
+++ b/src/sections/hero.astro
@@ -12,8 +12,8 @@ const translateLabels = useTranslations(currentLang as 'en' | 'es');
 ---
 
 <section id="hero" class="min-h-screen pt-24 pb-16 flex items-center relative">
-  <div class="container mx-auto px-4 md:px-8">
-    <div class="grid md:grid-cols-[55%_45%]">
+  <div class="container">
+    <div class="grid md:grid-cols-[60%_40%]">
       <!-- Hero Content -->
       <div class="space-y-7 reveal-content">
         <div
