--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,12 +4,15 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-    --color-background: #09090b;
+    --color-background: #0a0f1a;
     --color-text: #fff;
-    --color-primary: #02C3BD;
-    --color-secondary: #223a4e;
-    --color-tertiary: #037171;
-    --color-fourth: #009F93;
+    --color-primary: #00bfff;
+    --color-secondary: #1e3a5f;
+    --color-tertiary: #0077be;
+    --color-fourth: #4da6ff;
+    --color-gradient-primary: #87ceeb;
+    --color-gradient-secondary: #1e4a72;
+    --color-navbar-background: #0f1a2e;
 }
 
 html {
@@ -18,18 +21,19 @@ html {
     }
 }
 
+:root {
+    background-color: var(--color-background);
+    color: var(--color-text);
+    font-family: "Onest", sans-serif;
+}
+
 html,
 body {
     height: 100%;
     margin: 0;
     padding: 0;
     overflow: hidden;
-}
-
-body {
-    background-color: var(--color-background);
-    color: var(--color-text);
-    font-family: "Onest", sans-serif;
+    overflow-y: scroll;
 }
 
 main {
