--- a/src/sections/hero.astro
+++ b/src/sections/hero.astro
@@ -8,14 +8,14 @@ import { useTranslations } from "@/i18n/utils";
 
 const currentLang = Astro.currentLocale || "en";
 
-const translateLabels = useTranslations(currentLang as 'en' | 'es');
+const translateLabels = useTranslations(currentLang as "en" | "es");
 ---
 
 <section id="hero" class="min-h-screen pt-24 pb-16 flex items-center relative">
   <div class="container">
-    <div class="grid md:grid-cols-[60%_40%]">
+    <div class="grid grid-cols-1 md:grid-cols-3 items-center gap-6 md:gap-0 lg:gap-0">
       <!-- Hero Content -->
-      <div class="space-y-7 reveal-content">
+      <div class="md:col-span-2 space-y-7 reveal-content">
         <div
           class="flex m-0 justify-center md:justify-start w-full animate-fadeUp"
           style="--delay: 0.2s"
@@ -81,7 +81,7 @@ const translateLabels = useTranslations(currentLang as 'en' | 'es');
             class="bg-gradient-to-r from-primary/10 to-primary/30 border border-primary text-text py-3 px-8 rounded-full transition-all duration-300 flex items-center gap-2 font-medium"
           >
             <i class="ri-eye-line"></i>
-              {translateLabels("hero.viewProjects")}
+            {translateLabels("hero.viewProjects")}
           </a>
 
           <a
@@ -96,7 +96,9 @@ const translateLabels = useTranslations(currentLang as 'en' | 'es');
       </div>
 
       <!-- Hero Image -->
-      <CardImage className="hidden md:block mx-auto" />
+      <div class="hidden md:block md:col-span-1">
+        <CardImage />
+      </div>
     </div>
   </div>
 
