--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,8 +10,8 @@
     --color-secondary: #1e3a5f;
     --color-tertiary: #0077be;
     --color-fourth: #4da6ff;
-    --color-gradient-primary: #87ceeb;
-    --color-gradient-secondary: #1e4a72;
+    --color-gradient-primary: #00bfff;
+    --color-gradient-secondary: #e6f7ff;
     --color-navbar-background: #0f1a2e;
 }
 
