--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -20,7 +20,7 @@
     position: relative;
     width: 100%;
     height: 100dvh;
-    background: linear-gradient(45deg, #09090b 15%, var(--color-navbar-background) 100%);
+    background: linear-gradient(45deg, var(--color-background) 15%, var(--color-navbar-background) 100%);
     transform: translateX(calc(100% + 100px));
     transition: transform 0.8s cubic-bezier(0.76, 0, 0.24, 1);
     overflow-x: hidden;
@@ -148,7 +148,6 @@
 
 .language-selector select {
     appearance: none;
-    background-color: #09090b;
     color: inherit;
     padding: 0.5rem 2rem 0.5rem 0.75rem;
     border-radius: 0.375rem;
