feat: update styles and enhace profile picture

--- a/src/sections/experience.astro
+++ b/src/sections/experience.astro
@@ -6,10 +6,10 @@ const currentLang = Astro.currentLocale || "en";
 const translateLabels = useTranslations(currentLang as "en" | "es");
 ---
 
-<section id="experience" class="py-24">
+<section id="experience" class="sections-separator">
   <div class="container">
     <!-- Section Header -->
-    <div class="text-center mb-16">
+    <div class="text-start md:text-center mb-16">
       <h2 class="text-3xl md:text-4xl font-bold mb-4">
         <span
           class="text-5xl font-extrabold bg-gradient-to-r from-primary to-white text-transparent bg-clip-text"
