--- a/src/sections/aboutMe.astro
+++ b/src/sections/aboutMe.astro
@@ -5,10 +5,10 @@ import { useTranslations } from "@/i18n/utils";
 
 const currentLang = Astro.currentLocale || "en";
 
-const translateLabels = useTranslations(currentLang as 'en' | 'es');
+const translateLabels = useTranslations(currentLang as "en" | "es");
 ---
 
-<section id="about" class="py-24">
+<section id="about" class="sections-separator">
   <div class="container">
     <div class="flex flex-col items-center mb-16">
       <span class="text-primary font-medium mb-4 flex items-center gap-2">
@@ -24,23 +24,26 @@ const translateLabels = useTranslations(currentLang as 'en' | 'es');
       </h2>
     </div>
 
-    <div class="grid grid-cols-1 lg:grid-cols-3 gap-10 items-center">
+    <div class="grid grid-cols-1 lg:grid-cols-[40%_60%] gap-4 items-center">
       <!-- About Image -->
       <div
-        class="relative max-w-md mx-auto md:mx-0 animate-fadeIn"
+        class="relative max-w-md mx-auto animate-fadeIn"
         style="--delay: 0.5s"
       >
         <!-- Background Gradient Blob -->
         <div class="hero-gradients absolute inset-0 rounded-4xl"></div>
 
         <!-- Image -->
-        <CardImage className="pb-16 md:pb-0" />
+        <CardImage className="pb-16 px-10 md:pb-0 md:px-0" />
       </div>
 
       <!-- About Content -->
-      <div class="space-y-6 lg:col-span-2 text-center lg:text-left">
+      <div class="space-y-6 text-left">
         <GradientText
-          colors={["var(--color-gradient-primary)", "var(--color-gradient-secondary)"]}
+          colors={[
+            "var(--color-gradient-primary)",
+            "var(--color-gradient-secondary)",
+          ]}
           animationSpeed={10}
           showBorder={false}
           className="font-semibold text-2xl mb-4"
@@ -59,7 +62,10 @@ const translateLabels = useTranslations(currentLang as 'en' | 'es');
 
         <div class="pt-4">
           <GradientText
-            colors={["var(--color-gradient-primary)", "var(--color-gradient-secondary)"]}
+            colors={[
+              "var(--color-gradient-primary)",
+              "var(--color-gradient-secondary)",
+            ]}
             animationSpeed={10}
             showBorder={false}
             className="font-bold text-xl mb-4"
