--- a/src/sections/hero.astro
+++ b/src/sections/hero.astro
@@ -44,7 +44,7 @@ const translateLabels = useTranslations(currentLang as "en" | "es");
             <AnimatedSplitText
               text={translateLabels("hero.greeting")}
               className="text-5xl lg:text-6xl font-extrabold text-start"
-              highlightText="Mario Perdomo"
+              highlightText="Carlos Mario"
               client:load
               x={0}
               y={20}
