test: delete animations

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -35,7 +35,7 @@ const currentLang = Astro.currentLocale || "en";
     />
   </head>
   <body>
-    <AnimatedBackground client:load />
+    <!-- <AnimatedBackground client:load /> -->
     <Navbar />
     <main class="mx-auto px-4 md:px-8">
       <slot />
