feat: optimize images

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -35,8 +35,8 @@ const currentLang = Astro.currentLocale || "en";
     />
   </head>
   <body>
-    <!-- <AnimatedBackground client:load /> -->
-    <Navbar />
+    <AnimatedBackground client:load />
+    <Navbar client:visible />
     <main class="mx-auto px-4 md:px-8">
       <slot />
     </main>
