--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -36,7 +36,7 @@ const currentLang = Astro.currentLocale || "en";
   </head>
   <body>
     <AnimatedBackground client:load />
-    <Navbar client:visible />
+    <Navbar />
     <main class="mx-auto px-4 md:px-8">
       <slot />
     </main>
