performance test: delete scroll animation

--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -15,4 +15,4 @@ import AboutMe from "@/sections/aboutMe.astro";
   <section class="scroll-section"><Contact /></section>
 </Layout>
 
-<script src="@/animations/scroll-section/scroll-section.js" />
+<!-- <script src="@/animations/scroll-section/scroll-section.js" /> -->
