--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -78,7 +78,7 @@ input:-webkit-autofill {
     animation: gradient 8s linear infinite;
 }
 
-.animate-fadeUp {
+/* .animate-fadeUp {
     opacity: 0;
     animation: fadeUp 0.8s forwards;
     animation-delay: var(--delay, 0s);
@@ -88,7 +88,7 @@ input:-webkit-autofill {
     opacity: 0;
     animation: fadeIn 1.2s forwards;
     animation-delay: var(--delay, 0s);
-}
+} */
 
 @keyframes gradient {
     0% {
@@ -104,7 +104,7 @@ input:-webkit-autofill {
     }
 }
 
-@keyframes fadeUp {
+/* @keyframes fadeUp {
     from {
         opacity: 0;
         transform: translateY(20px);
@@ -124,4 +124,4 @@ input:-webkit-autofill {
     to {
         opacity: 1;
     }
-}
+} */
