--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -16,4 +16,4 @@ import AboutMe from "@/sections/aboutMe.astro";
   <section class="scroll-section"><Contact /></section>
 </Layout>
 
-<!-- <script src="@/animations/scroll-section/scroll-section.js"></script> -->
+<script src="@/animations/scroll-section/scroll-section.js"></script>
