--- a/src/sections/aboutMe.astro
+++ b/src/sections/aboutMe.astro
@@ -27,7 +27,8 @@ const translateLabels = useTranslations(currentLang as "en" | "es");
     <div class="grid grid-cols-1 lg:grid-cols-[40%_60%] gap-4 items-center">
       <!-- About Image -->
       <div
-        class="relative max-w-md mx-auto"
+        class="relative max-w-md mx-auto animate-fadeIn"
+        style="--delay: 0.5s"
       >
         <!-- Background Gradient Blob -->
         <div class="hero-gradients absolute inset-0 rounded-4xl"></div>
