--- a/src/sections/experience.astro
+++ b/src/sections/experience.astro
@@ -7,7 +7,7 @@ const translateLabels = useTranslations(currentLang as "en" | "es");
 ---
 
 <section id="experience" class="sections-separator">
-  <div class="container">
+  <div class="container mx-auto px-4 md:px-8 relative">
     <!-- Section Header -->
     <div class="text-start md:text-center mb-16">
       <h2 class="text-3xl md:text-4xl font-bold mb-4">
