--- a/src/sections/hero.astro
+++ b/src/sections/hero.astro
@@ -12,7 +12,7 @@ const translateLabels = useTranslations(currentLang as "en" | "es");
 ---
 
 <section id="hero" class="min-h-screen sections-separator flex items-center relative">
-  <div class="container">
+  <div class="container mx-auto px-4 md:px-8 relative">
     <div class="grid grid-cols-1 md:grid-cols-3 items-center gap-6 md:gap-0 lg:gap-0">
       <!-- Hero Content -->
       <div class="md:col-span-2 space-y-7 reveal-content">
