--- a/src/sections/experience.astro
+++ b/src/sections/experience.astro
@@ -1,4 +1,5 @@
 ---
+import GradientText from "@/animations/gradientText/gradientText";
 import { useTranslations } from "@/i18n/utils";
 
 const currentLang = Astro.currentLocale || "en";
@@ -9,15 +10,21 @@ const translateLabels = useTranslations(currentLang as "en" | "es");
 <section id="experience" class="sections-separator">
   <div class="container mx-auto px-4 md:px-8 relative">
     <!-- Section Header -->
-    <div class="text-start md:text-center mb-16">
-      <h2 class="text-3xl md:text-4xl font-bold mb-4">
-        <span
-          class="text-5xl font-extrabold bg-gradient-to-r from-primary to-white text-transparent bg-clip-text"
-        >
-          {translateLabels("experience.title")}
-        </span>
-      </h2>
-      <p class="text-gray-300 max-w-2xl mx-auto">
+    <div class="flex flex-col items-center mb-16 text-start md:text-center">
+      <GradientText
+        colors={[
+          "var(--color-gradient-primary)",
+          "var(--color-gradient-secondary)",
+        ]}
+        animationSpeed={10}
+        showBorder={false}
+        className="text-5xl font-extrabold bg-clip-text"
+        client:load
+      >
+        {translateLabels("experience.title")}
+      </GradientText>
+
+      <p class="text-gray-300 max-w-2xl mx-auto mt-4">
         {translateLabels("experience.description")}
       </p>
     </div>
