feat: remove padding from main layout

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -37,7 +37,7 @@ const currentLang = Astro.currentLocale || "en";
   <body>
     <AnimatedBackground client:load />
     <Navbar />
-    <main class="mx-auto px-4 md:px-8">
+    <main class="mx-auto">
       <slot />
     </main>
     <Footer />
